[package]
name = "rust-lapper"
version = "0.5.2-alpha.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/rust-lapper"
description = "A fast and easy interval overlap library"
documentation = "https://docs.rs/rust-lapper"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["tree", "interval", "bioinformatics", "ranges", "genomic"]

[dependencies]
num-traits = "0.2.12"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
cpu-time = "0.1.0"

[[bench]]
name = "lapper_benchmark"
harness = false
