[package]
name = "rust-lapper"
version = "1.0.1"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sstadick/rust-lapper"
description = "A fast and easy interval overlap library"
documentation = "https://docs.rs/rust-lapper"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["tree", "interval", "bioinformatics", "ranges", "genomic"]

[[example]]
name = "serde"
required-features = ["with_serde"]

[[example]]
name = "ex1"

[features]
default = []
with_serde = ["serde/derive"]

[dependencies]
num-traits = "0.2.12"
serde = { version  = "1.0.127", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
cpu-time = "0.1.0"
bincode = "1.3.3"

[[bench]]
name = "lapper_benchmark"
harness = false
